Fix non-matching closing tags

--- a/pub/index.html
+++ b/pub/index.html
@@ -14,8 +14,8 @@
     <body>
     <span  class="stdbody" style="font-size:48px">
         Schwobn in <br>
-        <span class="color-highlight"><div id="demo"></span>
-        </div>
+        <span class="color-highlight"><div id="demo"> </div>
+        </span>
     </span>
 
     <script>
