--- a/pub/index.html
+++ b/pub/index.html
@@ -12,8 +12,8 @@
     <link rel="stylesheet" href="https://konstantin.papesh.at/css/khp.css">
     </head>
     <body>
-    <span  class="stdbody" style="font-size:48px">
-        Schwobn in <br>
+    <span class="stdbody" style="font-size:48px">
+        Schwoabm in <br>
         <span class="color-highlight"><div id="demo"></span>
         </div>
     </span>
