--- a/pub/index.html
+++ b/pub/index.html
@@ -13,7 +13,7 @@
     </head>
     <body>
     <span class="stdbody" style="font-size:48px">
-        Schwobm in <br>
+        Schwoabm in <br>
         <span class="color-highlight"><div id="demo"> </div>
         </span>
     </span>
