--- a/pub/index.html
+++ b/pub/index.html
@@ -19,30 +19,34 @@
     </span>
 
     <script>
+    function getNextPubDate() {
+        return new Date(Math.ceil(new Date().getTime() / 604800000) * 604800000 - 28800000);
+    }
     // Set the date we're counting down to
-    var countDownDate = new Date("May 19, 2021 18:00:00").getTime();
+    let countDownDate = getNextPubDate();
 
     // Update the count down every 1 second
-    var x = setInterval(function() {
+    let x = setInterval(function() {
 
         // Get today's date and time
-        var now = new Date().getTime();
+        let now = new Date();
 
         // Find the distance between now and the count down date
-        var distance = countDownDate - now;
+        let distance = countDownDate.getTime() - now.getTime();
 
         // Time calculations for days, hours, minutes and seconds
-        var days = Math.floor(distance / (1000 * 60 * 60 * 24));
-        var hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
-        var minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
-        var seconds = Math.floor((distance % (1000 * 60)) / 1000);
+        let days = Math.floor(distance / (1000 * 60 * 60 * 24));
+        let hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
+        let minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
+        let seconds = Math.floor((distance % (1000 * 60)) / 1000);
 
         // Output the result in an element with id="demo"
         document.getElementById("demo").innerHTML = days + "d " + hours + "h "
             + minutes + "m " + seconds + "s ";
 
-        // If the count down is over, write some text 
-        if (distance < 0) {
+        // I know that pubs are only open until 2200 but code will bug out if you check after 2200 on the same day.
+        // Figured at that time everybody will be too drunk to check anyway.
+        if (now.getDay() === countDownDate.getDay() && now.getHours() >= 18) {
             clearInterval(x);
             document.getElementById("demo").innerHTML = "jedzt, wia san scho am flippsn!1";
         }
