--- a/pub/index.html
+++ b/pub/index.html
@@ -20,7 +20,9 @@
 
     <script>
     function getNextPubDate() {
-        return new Date(Math.ceil(new Date().getTime() / 604800000) * 604800000 - 28800000);
+        // Expected opening date (hopefully)
+        return new Date(2021, 9, 6, 18, 0, 0);
+        //return new Date(Math.ceil(new Date().getTime() / 604800000) * 604800000 - 28800000);
     }
     // Set the date we're counting down to
     let countDownDate = getNextPubDate();
