--- a/george/index.html
+++ b/george/index.html
@@ -19,32 +19,30 @@
     </span>
 
     <script>
-    function getNextPubDate() {
-        return new Date(Math.ceil(new Date().getTime() / 604800000) * 604800000 - 28800000);
-    }
     // Set the date we're counting down to
-    let countDownDate = getNextPubDate();
+    var countDownDate = new Date().addHours(Math.random()*2000).getTime();
 
     // Update the count down every 1 second
-    let x = setInterval(function() {
+    var x = setInterval(function() {
 
         // Get today's date and time
-        let now = new Date();
+        var now = new Date().getTime();
 
         // Find the distance between now and the count down date
-        let distance = countDownDate.getTime() - now.getTime();
+        var distance = countDownDate - now;
 
         // Time calculations for days, hours, minutes and seconds
-        let days = Math.floor(distance / (1000 * 60 * 60 * 24));
-        let hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
-        let minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
-        let seconds = Math.floor((distance % (1000 * 60)) / 1000);
+        var days = Math.floor(distance / (1000 * 60 * 60 * 24));
+        var hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
+        var minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
+        var seconds = Math.floor((distance % (1000 * 60)) / 1000);
 
         // Output the result in an element with id="demo"
         document.getElementById("demo").innerHTML = days + "d " + hours + "h "
             + minutes + "m " + seconds + "s ";
 
-        if (now.getDay() === countDownDate.getDay() && now.getHours() >= 18) {
+        // If the count down is over, write some text 
+        if (distance < 0) {
             clearInterval(x);
             document.getElementById("demo").innerHTML = "jedzt, wia san scho am flippsn!1";
         }
